--- a/_columns/Swing_Trading/zh-cn/2024-11-22.md
+++ b/_columns/Swing_Trading/zh-cn/2024-11-22.md
@@ -56,7 +56,7 @@ Relative Strength Line Guides The Sell相对强弱线引导卖出
 
 
 As the market indexes pulled back, XLY was still holding up above its 10-day moving average line. When it started to bounce from that level **(6)**, we increased our position back to a full position.  
-随着市场指数回落，XLY 仍保持在 10 天移动平均线上方。当它开始从该水平 **（6）** 反弹时，我们将头寸增加到满位。
+随着市场指数回落，XLY 仍保持在 10 天移动平均线上方。当它开始从该水平 **（6）** 反弹时，我们将头寸增加到满仓。
 
 
 We survived the shakeout the next day **(7)** holding as XLY recovered to the highs of the day.  
