--- a/_columns/The_Big_Picture/2024-11-27.md
+++ b/_columns/The_Big_Picture/2024-11-27.md
@@ -13,7 +13,7 @@ author: JUAN CARLOS ARANCIBIA
 The stock market cooled off Wednesday, as the Nasdaq composite ended a four-day win streak and the S&P 500 snapped a seven-day win streak. Yet, indexes remained in position for a push into December.
 
 
-Investors took some profits ahead of the Thanksgiving holiday. The Nasdaq lost 0.6% while the S&P 500 fell 0.4% and continued to arm-wrestle the 6,000 level. A distribution day for the S&P dropped off because 25 days have passed.
+Investors took some profits ahead of the Thanksgiving holiday. The Nasdaq lost 0.6% while the S&P 500 fell 0.4% and continued to arm-wrestle the 6,000 level. The Oct. 23 distribution day for the S&P dropped off because 25 days have passed.
 
 
 
@@ -34,7 +34,7 @@ Stock Market Hits Techs, Likes Financials
 -----------------------------------------
 
 
-While selling certainly wasn't isolated to the technology sector, it was the area of most concern Wednesday. Of the 15 worst-performing industry groups Wednesday, semiconductor, software and other tech groups accounted for 12 of them.
+While selling certainly wasn't isolated to the technology sector, it was the area of most concern Wednesday. Of the 15 worst-performing industry groups Wednesday, semiconductor, software and other tech groups accounted for 10 of them.
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/11/MP112724-2.jpg)Tech bellwether **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) trimmed losses and closed at its 50-day moving average. A lukewarm outlook, tariff risks and other factors [weighed on Nvidia](https://www.investors.com/news/technology/nvidia-stock-nvda-earnings-china-trade-war-worries/).
