--- a/_columns/The_Big_Picture/zh-cn/2024-11-21.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-21.md
@@ -46,8 +46,7 @@ Dow Jones Winners And Losers道琼斯赢家和输家
 ------------------------------------
 
 
-In the Dow Jones index, **IBM** ([IBM](https://research.investors.com/quote.aspx?symbol=IBM)) and **Sherwin-Williams** ([SHW](https://research.investors.com/quote.aspx?symbol=SHW)) were the clear winners Thursday, with gains of 3.6% and 3.1%, respectively. Sherwin-Williams alone gave the Dow 71 of its 461 points.  
-在道琼斯指数中，**IBM** （[IBM](https://research.investors.com/quote.aspx?symbol=IBM)） 和**宣伟公司** （[SHW](https://research.investors.com/quote.aspx?symbol=SHW)） 周四明显是赢家，分别上涨了 3.6% 和 3.1%。仅宣伟公司就给道琼斯指数带来了 461 点中的 71 点。
+In the Dow Jones index, **IBM** ([IBM](https://research.investors.com/quote.aspx?symbol=IBM)) and **Sherwin-Williams** ([SHW](https://research.investors.com/quote.aspx?symbol=SHW)) were the clear winners Thursday, with gains of 3.6% and 3.1%, respectively. Sherwin-Williams alone gave the Dow 71 of its 461 points.  
 
 
 On the downside, **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)) sold off 2.2% and 1.8%, respectively.  
@@ -80,23 +79,20 @@ Meanwhile, the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.asp
 ---
 
 
-What Investors Should Do Now投资者现在应该做什么
---------------------------------------
+What Investors Should Do Now
+----------------------------
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/11/MP112124-217x300.jpg)
 
 
-As the major stock indexes rebounded from their recent losses, IBD maintain its recommended exposure level at 80%-100%. So far, the indexes have successfully defended their [21-day exponential moving averages](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/), which are shorter-term support levels to watch.  
-随着主要股指从最近的损失中反弹，IBD 将其建议的风险敞口维持在 80%-100%。到目前为止，这些指数已经成功捍卫了其 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/)，这是值得关注的短期支撑位。
+As the major stock indexes rebounded from their recent losses, IBD maintain its recommended exposure level at 80%-100%. So far, the indexes have successfully defended their [21-day exponential moving averages](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/), which are shorter-term support levels to watch.  
 
 
-As the stock market recovers, the environment continues to require diligent [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). Make sure you monitor your positions that are acting out of character and sell any stocks that trigger sell rules.  
-随着股市的复苏，环境继续需要勤奋的[风险管理](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)，这是 [IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)之一。确保您监控您的行为不合时宜的头寸，并出售任何触发卖出规则的股票。
+As the stock market recovers, the environment continues to require diligent [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). Make sure you monitor your positions that are acting out of character and sell any stocks that trigger sell rules.  
 
 
-[IBD MarketSurge's](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) Breaking Out Today list featured one new stock, **Procore Technologies** ([PCOR](https://research.investors.com/quote.aspx?symbol=PCOR)), which broke out past a 74.11 handle buy point. Meanwhile, the Near Pivot list has only two stock ideas on it, and one is **Burlington Stores** ([BURL](https://research.investors.com/quote.aspx?symbol=BURL)).  
-[IBD MarketSurge 的](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)今日突破名单中出现了一只新股 **Procore Technologies** （[PCOR），](https://research.investors.com/quote.aspx?symbol=PCOR)该股突破了 74.11 的买入点。同时，Near Pivot 列表中只有两个股票想法，一个是 **Burlington Stores** （[BURL](https://research.investors.com/quote.aspx?symbol=BURL)）。
+[IBD MarketSurge's](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) Breaking Out Today list featured one new stock, **Procore Technologies** ([PCOR](https://research.investors.com/quote.aspx?symbol=PCOR)), which broke out past a 74.11 handle buy point. Meanwhile, the Near Pivot list has only two stock ideas on it, and one is **Burlington Stores** ([BURL](https://research.investors.com/quote.aspx?symbol=BURL)).  
 
 
 
@@ -104,8 +100,7 @@ As the stock market recovers, the environment continues to require diligent [ris
 ---
 
 
-[**This Industry Group — And 4 IPOs — Polish 20 'Perfect' Gems  
-这个行业集团 — 以及 4 家 IPO — 打磨了 20 颗“完美”的宝石**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
+[**This Industry Group — And 4 IPOs — Polish 20 'Perfect' Gems**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/) 
 
 
 
@@ -113,21 +108,18 @@ As the stock market recovers, the environment continues to require diligent [ris
 ---
 
 
-Dow Jones Tech Titan Shows New Buy Point道琼斯科技巨头显示新的买入点
-------------------------------------------------------
+Dow Jones Tech Titan Shows New Buy Point
+----------------------------------------
 
 
-Leaders to watch include Dow Jones giant **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)), **Cloudflare** ([NET](https://research.investors.com/quote.aspx?symbol=NET)) and fintech leader **Tradeweb Markets** ([TW](https://research.investors.com/quote.aspx?symbol=TW)).  
-值得关注的领导者包括道琼斯巨头**苹果** （[AAPL）、](https://research.investors.com/quote.aspx?symbol=AAPL)**Cloudflare** （[NET）](https://research.investors.com/quote.aspx?symbol=NET) 和金融科技领导者 **Tradeweb Markets** （[TW）。](https://research.investors.com/quote.aspx?symbol=TW)
+Leaders to watch include Dow Jones giant **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)), **Cloudflare** ([NET](https://research.investors.com/quote.aspx?symbol=NET)) and fintech leader **Tradeweb Markets** ([TW](https://research.investors.com/quote.aspx?symbol=TW)).  
 
 
 
-Apple stock moved down 0.2% Thursday and is 4% from a new [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) at 237.49 as a result of a flat base. Shares are back above their 50-day line. A lagging relative strength line is an ominous technical indicator to watch.  
-由于底部持平，苹果股价周四下跌 0.2%，距离新的[买入点](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) 237.49 下跌 4%。股价回到 50 日线上方。滞后的相对强弱线是一个值得关注的不祥技术指标。
+Apple stock moved down 0.2% Thursday and is 4% from a new [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) at 237.49 as a result of a flat base. Shares are back above their 50-day line. A lagging relative strength line is an ominous technical indicator to watch.  
 
 
-Cybersecurity leader Cloudflare jumped 8% Thursday, breaking out past a 99.17 buy point in a cup with handle. It was the [IBD Stock Of The Day.](https://www.investors.com/research/ibd-stock-of-the-day/cloudflare-stock-artificial-intelligence-crypto-bitcoin-developers/)  
-网络安全领导者 Cloudflare 周四上涨 8%，突破了 99.17 的买入点。这是[当天的 IBD 股票。](https://www.investors.com/research/ibd-stock-of-the-day/cloudflare-stock-artificial-intelligence-crypto-bitcoin-developers/)
+Cybersecurity leader Cloudflare jumped 8% Thursday, breaking out past a 99.17 buy point in a cup with handle. It was the [IBD Stock Of The Day.](https://www.investors.com/research/ibd-stock-of-the-day/cloudflare-stock-artificial-intelligence-crypto-bitcoin-developers/)  
 
 
 Tradeweb is attempting to break out past a 136.13 buy point in a flat base, but shares were turned away Wednesday.  
