--- a/_columns/The_Big_Picture/zh-cn/2024-11-26.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-26.md
@@ -43,36 +43,30 @@ Despite the gains, declining stocks outnumbered advancers on the NYSE by nearly 
 尽管上涨，但下跌的股票数量与纽约证券交易所上涨的股票数量之差接近 2 比 1。纳斯达克的比率低于 2 比 1。
 
 
-The Dow Jones industrials made it five up days in a row, paring a 0.7% morning loss to a gain of 0.3% by the close. It also made a record closing high. A sell-off in **Amgen** ([AMGN](https://research.investors.com/quote.aspx?symbol=AMGN)) was offset by strength in Amazon and Microsoft. Amgen shares closed off lows but still fell nearly 5% after the company reported good, but not good enough, trial results for its highly anticipated [weight-loss drug, MariTide](https://www.investors.com/news/technology/amgen-stock-weight-loss-drug-maritide-eli-lilly-zepbound/).  
-道琼斯工业指数连续五天上涨，收盘时收盘时下跌 0.7%，上涨 0.3%。它还创下了创纪录的收盘新高。**安进** （[AMGN）](https://research.investors.com/quote.aspx?symbol=AMGN) 的抛售被亚马逊和 Microsoft 的强劲抵消。安进股价收于低点，但仍下跌近 5%，此前该公司报告了其备受期待[的减肥药 MariTide](https://www.investors.com/news/technology/amgen-stock-weight-loss-drug-maritide-eli-lilly-zepbound/) 的良好但不够好的试验结果。
+The Dow Jones industrials made it five up days in a row, paring a 0.7% morning loss to a gain of 0.3% by the close. It also made a record closing high. A sell-off in **Amgen** ([AMGN](https://research.investors.com/quote.aspx?symbol=AMGN)) was offset by strength in Amazon and Microsoft. Amgen shares closed off lows but still fell nearly 5% after the company reported good, but not good enough, trial results for its highly anticipated [weight-loss drug, MariTide](https://www.investors.com/news/technology/amgen-stock-weight-loss-drug-maritide-eli-lilly-zepbound/).  
 
 
-The stock market shrugged off comments from President-elect Donald Trump late Monday, who said he would impose a 25% tax on all products entering the country from Canada and Mexico. He also announced an additional 10% tariff on goods from China. Tariffs could dramatically raises prices for American consumers who have already been dealing with inflation. ETFs tracking Mexico, Canada and China stocks fell.  
-股市周一晚些时候对当选总统唐纳德·特朗普的评论不屑一顾，特朗普表示，他将对从加拿大和墨西哥进入该国的所有产品征收25%的税。他还宣布对来自中国的商品加征 10% 的关税。关税可能会大幅提高已经在应对通货膨胀的美国消费者的价格。追踪墨西哥、加拿大和中国股市的 ETF 下跌。
+The stock market shrugged off comments from President-elect Donald Trump late Monday, who said he would impose a 25% tax on all products entering the country from Canada and Mexico. He also announced an additional 10% tariff on goods from China. Tariffs could dramatically raises prices for American consumers who have already been dealing with inflation. ETFs tracking Mexico, Canada and China stocks fell.  
 
 
-PCE In Stock Market's FocusPCE 是股票市场的焦点
----------------------------------------
+PCE In Stock Market's Focus
+---------------------------
 
 
-It should be a quiet, low-volume session Wednesday ahead of the Thanksgiving holiday, but a key piece of economic data looms large with the release of the Personal Income and Spending report at 8:30 a.m. ET. Inside the report, the Federal Reserve's preferred inflation gauge — the core personal consumption expenditures index — is expected to show prices up 2.8% in October from a year ago. That would be a slight increase from 2.7% in September.  
-在感恩节假期之前，周三应该是一个安静、低成交量的交易时段，但随着美国东部时间上午 8：30 个人收入和支出报告的发布，一项关键的经济数据迫在眉睫。在报告中，美联储首选的通胀指标——核心个人消费支出指数——预计将显示 10 月份物价比一年前上涨 2.8%。这将比 9 月份的 2.7% 略有增加。
+It should be a quiet, low-volume session Wednesday ahead of the Thanksgiving holiday, but a key piece of economic data looms large with the release of the Personal Income and Spending report at 8:30 a.m. ET. Inside the report, the Federal Reserve's preferred inflation gauge — the core personal consumption expenditures index — is expected to show prices up 2.8% in October from a year ago. That would be a slight increase from 2.7% in September.  
 
 
-The stock market didn't react much to the 2 p.m. ET release of the minutes from the early-November Fed meeting. Committee members acknowledged the possibility of gradual rate cuts so long as the U.S. economy continues to perform as expected.  
-股市对美国东部时间下午 2 点发布的 11 月初美联储会议纪要没有太大反应。委员会成员承认，只要美国经济继续按预期表现，就有可能逐步降息。
+The stock market didn't react much to the 2 p.m. ET release of the minutes from the early-November Fed meeting. Committee members acknowledged the possibility of gradual rate cuts so long as the U.S. economy continues to perform as expected.  
 
 
-The stock market isn't focused on inflation like it once was because inflation is heading in the right direction. It's still above the Fed's preferred target of 2%, but the economy continues to perform well — so much so that the odds for another quarter-point rate cut at the December meeting have been fading. Futures traders see a 60% chance of another rate cut in December, down from 75% about a month ago.  
-股市不像以前那样关注通货膨胀，因为通货膨胀正在朝着正确的方向发展。这仍然高于美联储首选的 2% 目标，但经济继续表现良好——以至于在 12 月的会议上再次降息 25 个基点的可能性一直在下降。期货交易员认为 12 月再次降息的可能性为 60%，低于大约一个月前的 75%。
+The stock market isn't focused on inflation like it once was because inflation is heading in the right direction. It's still above the Fed's preferred target of 2%, but the economy continues to perform well — so much so that the odds for another quarter-point rate cut at the December meeting have been fading. Futures traders see a 60% chance of another rate cut in December, down from 75% about a month ago.  
 
 
-Watch The Stock Market Leaders观看股市领导者
--------------------------------------
+Watch The Stock Market Leaders
+------------------------------
 
 
-With so many stocks out of position and well-extended past proper entry points, it's important to be discerning with new buys. The common pitfall now is to buy a lagging stock in an industry group just because it's setting up in a base and near a buy point.  
-由于如此多的股票处于不利位置，并且已经很好地超过了适当的切入点，因此辨别新的买入是很重要的。现在常见的陷阱是，仅仅因为一个行业集团的股票位于底部并接近买入点，就购买该股票。
+With so many stocks out of position and well-extended past proper entry points, it's important to be discerning with new buys. The common pitfall now is to buy a lagging stock in an industry group just because it's setting up in a base and near a buy point.  
 
 
 
@@ -80,8 +74,7 @@ With so many stocks out of position and well-extended past proper entry points, 
 ---
 
 
-**[See Which Stocks Are In The Leaderboard Model Portfolio  
-查看排行榜模型投资组合中有哪些股票](https://leaderboard.investors.com/#/)**
+**[See Which Stocks Are In The Leaderboard Model Portfolio](https://leaderboard.investors.com/#/)** 
 
 
 
@@ -89,12 +82,10 @@ With so many stocks out of position and well-extended past proper entry points, 
 ---
 
 
-In the insurance sector, **Chubb** ([CB](https://research.investors.com/quote.aspx?symbol=CB)) is forming a flat base and could try to break out of a downtrend soon. But it has a weak [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/how-to-invest-in-stocks-relative-strength/) of 63. The big leaders in the group are **Lemonade** ([LMND](https://research.investors.com/quote.aspx?symbol=LMND)) and **Goosehead Insurance** ([GSHD](https://research.investors.com/quote.aspx?symbol=GSHD)). Buying the true leaders in a group on pullbacks is a generally better strategy than buying a laggard breakout.  
-在保险板块，**Chubb** （[CB）](https://research.investors.com/quote.aspx?symbol=CB) 正在形成平坦的基础，并可能很快尝试突破下跌趋势。但它的[相对强度评分](https://www.investors.com/how-to-invest/investors-corner/how-to-invest-in-stocks-relative-strength/)很弱，只有 63。该集团的主要领导者是 **Lemonade** （[LMND）](https://research.investors.com/quote.aspx?symbol=LMND) 和 **Goosehead Insurance** （[GSHD）。](https://research.investors.com/quote.aspx?symbol=GSHD)在回调时买入一组真正的领导者通常比买入落后的突破更好。
+In the insurance sector, **Chubb** ([CB](https://research.investors.com/quote.aspx?symbol=CB)) is forming a flat base and could try to break out of a downtrend soon. But it has a weak [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/how-to-invest-in-stocks-relative-strength/) of 63. The big leaders in the group are **Lemonade** ([LMND](https://research.investors.com/quote.aspx?symbol=LMND)) and **Goosehead Insurance** ([GSHD](https://research.investors.com/quote.aspx?symbol=GSHD)). Buying the true leaders in a group on pullbacks is a generally better strategy than buying a laggard breakout.  
 
 
-**Western Digital** ([WDC](https://research.investors.com/quote.aspx?symbol=WDC)) rallied sharply for the second straight session and closed just below a 73.50 entry. New buyers are watching to see if Western Digital can break out of a cup-with-handle base. But the stock's [relative strength line](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/) is lagging badly on the weekly chart.  
-**西部数据** （[WDC）](https://research.investors.com/quote.aspx?symbol=WDC) 连续第二个交易日大幅上涨，收盘价略低于 73.50。新买家正在关注 Western Digital 是否能够打破带把手杯的基础。但该股的[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/)在周线图上严重滞后。
+**Western Digital** ([WDC](https://research.investors.com/quote.aspx?symbol=WDC)) rallied sharply for the second straight session and closed just below a 73.50 entry. New buyers are watching to see if Western Digital can break out of a cup-with-handle base. But the stock's [relative strength line](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/) is lagging badly on the weekly chart.  
 
 
 Homebuilders lagged after strong gains Monday. After plunging more than 14 basis points Monday to around 4.26%, the 10-year Treasury yield added four basis points to 4.30%.  
