--- a/_columns/The_Big_Picture/zh-cn/2024-11-27.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-27.md
@@ -14,8 +14,8 @@ The stock market cooled off Wednesday, as the Nasdaq composite ended a four-day 
 周三股市降温，纳斯达克综合指数结束了连续四天的上涨，标准普尔 500 指数结束了连续七天的上涨。然而，指数仍处于推动至 12 月的位置。
 
 
-Investors took some profits ahead of the Thanksgiving holiday. The Nasdaq lost 0.6% while the S&P 500 fell 0.4% and continued to arm-wrestle the 6,000 level. A distribution day for the S&P dropped off because 25 days have passed.  
-投资者在感恩节假期前获利了结。纳斯达克指数下跌 0.6%，而标准普尔 500 指数下跌 0.4%，并继续在 6,000 点水平上搏斗。S&P 的分发日因 25 天已过去而下降。
+Investors took some profits ahead of the Thanksgiving holiday. The Nasdaq lost 0.6% while the S&P 500 fell 0.4% and continued to arm-wrestle the 6,000 level. The Oct. 23 distribution day for the S&P dropped off because 25 days have passed.  
+投资者在感恩节假期前获利了结。纳斯达克指数下跌 0.6%，而标准普尔 500 指数下跌 0.4%，并继续在 6,000 点水平上搏斗。标准普尔指数的 10 月 23 日分发日因 25 天已过去而下降。
 
 
 
@@ -40,8 +40,7 @@ Stock Market Hits Techs, Likes Financials股市打击科技股，喜欢金融股
 ------------------------------------------------------
 
 
-While selling certainly wasn't isolated to the technology sector, it was the area of most concern Wednesday. Of the 15 worst-performing industry groups Wednesday, semiconductor, software and other tech groups accounted for 12 of them.  
-虽然抛售肯定不仅限于科技行业，但它是周三最受关注的领域。在周三表现最差的 15 个行业组中，半导体、软件和其他科技行业占其中的 12 个。
+While selling certainly wasn't isolated to the technology sector, it was the area of most concern Wednesday. Of the 15 worst-performing industry groups Wednesday, semiconductor, software and other tech groups accounted for 10 of them.  
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/11/MP112724-2.jpg)Tech bellwether **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) trimmed losses and closed at its 50-day moving average. A lukewarm outlook, tariff risks and other factors [weighed on Nvidia](https://www.investors.com/news/technology/nvidia-stock-nvda-earnings-china-trade-war-worries/).  
@@ -56,8 +55,7 @@ Real Estate Select Sector SPDR ([XLRE](https://research.investors.com/quote.aspx
 房地产精选板块 SPDR （[XLRE）](https://research.investors.com/quote.aspx?symbol=XLRE) 领涨标准普尔板块，上涨 0.7%。房地产投资信托基金出现了几次突破，包括 **Essential Property Realty** （[EPRT](https://research.investors.com/quote.aspx?symbol=EPRT)） 和 **AvalonBay Communities** （[AVB](https://research.investors.com/quote.aspx?symbol=AVB)）。
 
 
-Financials also climbed. **The Hartford** ([HIG](https://research.investors.com/quote.aspx?symbol=HIG)) broke out of a flat base, although in light trading. **Berkshire Hathaway** ([BRKB](https://research.investors.com/quote.aspx?symbol=BRKB)) also broke out of a flat base but closed below the 585.82 buy point.  
-金融股也攀升。**哈特福德** （[HIG](https://research.investors.com/quote.aspx?symbol=HIG)） 从平坦的基础中突破出来，尽管交易清淡。**伯克希尔哈撒韦**公司 （[BRKB）](https://research.investors.com/quote.aspx?symbol=BRKB) 也突破了平坦的底部，但收于 585.82 买入点下方。
+Financials also climbed. **The Hartford** ([HIG](https://research.investors.com/quote.aspx?symbol=HIG)) broke out of a flat base, although in light trading. **Berkshire Hathaway** ([BRKB](https://research.investors.com/quote.aspx?symbol=BRKB)) also broke out of a flat base but closed below the 585.82 buy point.  
 
 
 In general, growth stocks continue to perform well. The Innovator IBD Breakout Opportunities ETF ([BOUT](https://research.investors.com/quote.aspx?symbol=BOUT)) — which is designed to capture breakouts to new highs — is up 11.5% this month. That would make it the fund's best month in almost four years.  
