--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-22.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-22.md
@@ -72,7 +72,7 @@ The [IBD Stock Checkup](https://research.investors.com/stock-checkup/nyse-decker
 
 
 In terms of key IBD ratings, Deckers Outdoor earns a Composite Rating of 91, RS Rating of 86 and EPS Rating of 99, all out of a best-possible 99.  
-在关键的 IBD 评级方面，Deckers Outdoor 的综合评级为 91，RS 评级为 86，EPS 评级为 99，均为 99 分。
+在关键的 IBD 评级方面，Deckers Outdoor 的综合评级为 91，RS 评级为 86，EPS 评级为 99，均满分 99。
 
 
 Earnings growth averaged 57% over the past three quarters, above the three-year rate of 33%. Further, Deckers boasts eight quarters of rising fund ownership.  
