--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-25.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-25.md
@@ -30,8 +30,7 @@ Net sales for Marmaxx, which includes TJ Maxx and Marshalls, rose 4% to $8.44 bi
 Marmaxx（包括 TJ Maxx 和 Marshalls）的净销售额增长 4% 至 84.4 亿美元。HomeGoods 销售额增长 7%，而 TJX Canada 销售额增长 5%。TJX 的国际销售额（包括欧洲和澳大利亚）增长了 16%，达到近 19 亿美元。
 
 
-"Across the company, customer transactions drove our comp sales increases, which tells us that our values and treasure-hunt shopping experience are appealing to a wide range of customers," CEO Ernie Herrman said in the earnings release.  
-“在整个公司，客户交易推动了我们的 comp 销售额增长，这告诉我们，我们的价值观和寻宝购物体验吸引了广泛的客户，”首席执行官 Ernie Herrman 在财报中表示。
+"Across the company, customer transactions drove our comp sales increases, which tells us that our values and treasure-hunt shopping experience are appealing to a wide range of customers," CEO Ernie Herrman said in the earnings release.  
 
 
 TJX lifted its full-year earnings outlook to range from $4.15 to $4.17 per share, up from its prior guidance for $4.09 to $4.13 per share. However, the updated guidance still fell short of FactSet estimates for $4.19 per share.  
@@ -58,8 +57,8 @@ TD Cowen also raised its price target for TJX stock on Monday by $2 to 132 and k
 TD Cowen 周一还将 TJX 股票的目标价上调 2 美元至 132 美元，并维持对该股的买入评级。
 
 
-Retail Earnings 零售收益
---------------------
+Retail Earnings
+---------------
 
 
 Among other retailers, **Bath & Body Works** ([BBWI](https://research.investors.com/quote.aspx?symbol=BBWI)) popped more than 14% Monday on its earnings beat. **Macy's** ([M](https://research.investors.com/quote.aspx?symbol=M)) retreated nearly 4% after delaying its quarterly report. The legacy department giant announced it is conducting an internal investigation after discovering an employee "intentionally" hid $132 million to $154 million in delivery expenses dating back to Q4 2021.  
@@ -78,8 +77,8 @@ Analysts see Kohl's earnings nearly halving to 28 cents per share while revenue 
 分析师预计 Kohl's 的收益几乎减半至每股 28 美分，而收入下滑超过 5% 至 36.4 亿美元。
 
 
-TJX Stock TJX 股票
-----------------
+TJX Stock
+---------
 
 
 
