--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-26.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-26.md
@@ -13,13 +13,12 @@ author: HARRISON MILLER
 
 
 Brazilian aerospace manufacturer Embraer is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) for Tuesday as shares surged to a 10-year high.  
-巴西航空航天制造商 Embraer 是周二的 [IBD 今日股票](https://www.investors.com/research/ibd-stock-of-the-day/)，股价飙升至 10 年高点。
+巴西航空航天制造商 Embraer 是周二的 [IBD 今日股票](https://www.investors.com/research/ibd-stock-of-the-day/)，因为股价飙升至 10 年高点。
 
 
 
 
-**Embraer** ([ERJ](https://research.investors.com/quote.aspx?symbol=ERJ)) produces a fleet of commercial, business and defense jets. On the commercial front, Embraer is best-known for its Embraer 175 (E175) single-aisle planes. It also manufacturers the C-390 military transport aircraft. The company's Phenom 300 has been the world's bestselling light jet for the past 12 years, according to a [May announcement](https://embraer.com/global/en/news?slug=1207346-embraers-phenom-300-leads-the-industry-in-twinjet-deliveries-and-is-the-worlds-best-selling-light-jet-for-12-consecutive-years).  
-**巴西航空工业公司** （[ERJ）](https://research.investors.com/quote.aspx?symbol=ERJ) 生产一支由商用、公务和国防喷气式飞机组成的机队。在商业方面，Embraer 以其 Embraer 175 （E175） 单通道飞机而闻名。它还生产 C-390 军用运输机。根据 [5 月份的公告](https://embraer.com/global/en/news?slug=1207346-embraers-phenom-300-leads-the-industry-in-twinjet-deliveries-and-is-the-worlds-best-selling-light-jet-for-12-consecutive-years)，该公司的 Phenom 300 在过去 12 年中一直是世界上最畅销的轻型喷气式飞机。
+**Embraer** ([ERJ](https://research.investors.com/quote.aspx?symbol=ERJ)) produces a fleet of commercial, business and defense jets. On the commercial front, Embraer is best-known for its Embraer 175 (E175) single-aisle planes. It also manufacturers the C-390 military transport aircraft. The company's Phenom 300 has been the world's bestselling light jet for the past 12 years, according to a [May announcement](https://embraer.com/global/en/news?slug=1207346-embraers-phenom-300-leads-the-industry-in-twinjet-deliveries-and-is-the-worlds-best-selling-light-jet-for-12-consecutive-years).  
 
 
 Embraer is coming off its major [Q3 beat from Nov. 8](https://www.investors.com/news/embraer-maintains-revenue-growth-expectation/), which saw earnings increase to $1.20 per share from 18 cents the year prior. Revenue jumped 32% to $1.69 billion, with sales from its "executive aviation" and "defense and security" segments each increasing 65% compared with a year ago.  
