--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-27.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-27.md
@@ -21,7 +21,7 @@ Rally For Dow Jones Stock道琼斯股票反弹
 
 
 Travelers, a Dow Jones stock, has rallied 17% so far this quarter on earnings and the postelection rally.  
-道琼斯股票 Travelers 本季度迄今因收益和选后反弹而上涨了 17%。
+道琼斯股票 Travelers 本季度迄今因收益和选后反弹而上涨 17%。
 
 
 A huge earnings beat on Oct. 17 led to a flurry of analyst price-target hikes, FactSet shows. But the average rating of 29 analysts covering Travelers stock is hold.  
