--- a/_columns/The_Big_Picture/zh-cn/2024-11-21.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-21.md
@@ -42,11 +42,12 @@ Nine of the 11 S&P 500 sectors ended higher, with utilities, financials and cons
 ---
 
 
-Dow Jones Winners And Losers道琼斯赢家和输家
-------------------------------------
+Dow Jones Winners And Losers
+----------------------------
 
 
-In the Dow Jones index, **IBM** ([IBM](https://research.investors.com/quote.aspx?symbol=IBM)) and **Sherwin-Williams** ([SHW](https://research.investors.com/quote.aspx?symbol=SHW)) were the clear winners Thursday, with gains of 3.6% and 3.1%, respectively. Sherwin-Williams alone gave the Dow 71 of its 461 points.  
+In the Dow Jones index, **IBM** ([IBM](https://research.investors.com/quote.aspx?symbol=IBM)) and **Sherwin-Williams** ([SHW](https://research.investors.com/quote.aspx?symbol=SHW)) were the clear winners Thursday, with gains of 3.6% and 3.1%, respectively. Sherwin-Williams alone gave the Dow 71 of its 461 points.  
+在道琼斯指数中，**IBM** （[IBM](https://research.investors.com/quote.aspx?symbol=IBM)） 和**宣伟公司** （[SHW](https://research.investors.com/quote.aspx?symbol=SHW)） 周四明显是赢家，分别上涨了 3.6% 和 3.1%。仅宣伟公司就给道琼斯指数带来了 461 点中的 71 点。
 
 
 On the downside, **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)) sold off 2.2% and 1.8%, respectively.  
@@ -70,8 +71,7 @@ Meanwhile, the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.asp
 ---
 
 
-[**Nvidia Who? Savvy Investors Can't Get Enough Of This AI Behemoth  
-英伟达是谁？精明的投资者对这个 AI 庞然大物爱不释手**](https://www.investors.com/research/ibd-stock-analysis/broadcom-stock-avgo-nvidia-best-mutual-funds/)
+[**Nvidia Who? Savvy Investors Can't Get Enough Of This AI Behemoth**](https://www.investors.com/research/ibd-stock-analysis/broadcom-stock-avgo-nvidia-best-mutual-funds/) 
 
 
 
