--- a/_columns/The_Big_Picture/zh-cn/2024-11-25.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-25.md
@@ -52,47 +52,58 @@ Homebuilders and small-cap stocks particularly benefited as the yield on the 10-
 根据道琼斯市场数据，10 年期美国国债收益率下滑 15 个基点至 4.26%，创下 8 月 2 日以来的最大单日跌幅，房屋建筑商和小盘股尤其受益。
 
 
-**Toll Brothers** ([TOL](https://research.investors.com/quote.aspx?symbol=TOL)) broke out of a flat base with a 6.5% gain in heavy volume. The [relative strength line](https://www.investors.com/how-to-invest/investors-corner/relative-strength-line-gives-crucial-clues-about-stocks-ready-to-make-big-gains/#:~:text=Simply%20put%2C%20the%20relative%20strength,with%20the%20Relative%20Strength%20Rating.) is also at a new high. The building industry group was one of the top 20 groups in IBD's 197-industry ranking.  
+**Toll Brothers** ([TOL](https://research.investors.com/quote.aspx?symbol=TOL)) broke out of a flat base with a 6.5% gain in heavy volume. The [relative strength line](https://www.investors.com/how-to-invest/investors-corner/relative-strength-line-gives-crucial-clues-about-stocks-ready-to-make-big-gains/#:~:text=Simply%20put%2C%20the%20relative%20strength,with%20the%20Relative%20Strength%20Rating.) is also at a new high. The building industry group was one of the top 20 groups in IBD's 197-industry ranking.  
+**Toll Brothers** （[TOL](https://research.investors.com/quote.aspx?symbol=TOL)） 以 6.5% 的大宗销量增长打破了平坦的局面。[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/relative-strength-line-gives-crucial-clues-about-stocks-ready-to-make-big-gains/#:~:text=Simply%20put%2C%20the%20relative%20strength,with%20the%20Relative%20Strength%20Rating.)也处于新高。建筑行业集团是 IBD 的 197 个行业排名中的前 20 个集团之一。
 
 
-**Taylor Morrison** ([TMHC](https://research.investors.com/quote.aspx?symbol=TMHC)) added 5% and cleared a buy point of 71.95. The homebuilder was the latest addition to Investor's Business Daily's model portfolio, [IBD Leaderboard](https://leaderboard.investors.com/?).  
-
-
-
-The small-cap Russell 2000 rose 1.5% and made its highest close in three years. It's now inches away from taking out the all-time high of 2,458.86 set in November 2021.  
-
-
-The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) rose 0.8% and is extended from a cup base's buy point of 29.15.  
-
-
-Minutes of the Fed's November policy meeting are due Tuesday at 2 p.m. ET.  
-
-
-On Wednesday, the Fed's preferred inflation gauge, the personal consumption expenditures price index, will be released. [Economists expect](https://research.investors.com/economic-calendar/?) a 0.2% monthly increase in the October PCE and a 2.3% rise on an annual basis. Core inflation is expected to rise 0.3% for the month and 2.8% for the 12 month period.  
-
-
-Stock Market Sees Multiple Breakouts
-------------------------------------
+**Taylor Morrison** ([TMHC](https://research.investors.com/quote.aspx?symbol=TMHC)) added 5% and cleared a buy point of 71.95. The homebuilder was the latest addition to Investor's Business Daily's model portfolio, [IBD Leaderboard](https://leaderboard.investors.com/?).  
+**Taylor Morrison** （[TMHC](https://research.investors.com/quote.aspx?symbol=TMHC)） 上涨 5% 并清算了 71.95 的买入点。这家住宅建筑商是 Investor's Business Daily 的模型投资组合 [IBD 排行榜](https://leaderboard.investors.com/?)的最新成员。
 
 
 
-**Sherwin-Williams** ([SHW](https://research.investors.com/quote.aspx?symbol=SHW)), which cleared a flat base at a buy point of 392.57, was among Monday's breakouts. The stock was also the second-highest point contributor to the Dow, while Nvidia cost the index more than 36 points. The Dow added 440 points Monday.  
+The small-cap Russell 2000 rose 1.5% and made its highest close in three years. It's now inches away from taking out the all-time high of 2,458.86 set in November 2021.  
+小盘股罗素 2000 指数上涨 1.5%，创下三年来的最高收盘价。现在距离打破 2021 年 11 月创下的 2,458.86 点的历史高点仅几英寸之遥。
 
 
-Although oil and gas stocks lagged, offshore energy stock **Oceaneering** ([OII](https://research.investors.com/quote.aspx?symbol=OII)) rose and attempted a breakout at an alternative [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) of 30.45 before pulling back. Oceaneering cleared a handle entry at 29.22 earlier.  
+The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) rose 0.8% and is extended from a cup base's buy point of 29.15.  
+Innovator IBD 50 ETF （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 上涨 0.8%，从杯底的买入点 29.15 延伸。
 
 
-Other notable breakouts included **Ceco Environmental** ([CECO](https://research.investors.com/quote.aspx?symbol=CECO)), which rallied past a 31.55 buy point amid a nine-day winning streak. The stock also has a [relative strength line](https://www.investors.com/how-to-invest/investors-corner/relative-strength-line-gives-crucial-clues-about-stocks-ready-to-make-big-gains/#:~:text=Simply%20put%2C%20the%20relative%20strength,with%20the%20Relative%20Strength%20Rating.) at a new high. In building products, **Azek** ([AZEK](https://research.investors.com/quote.aspx?symbol=AZEK)) gapped past a 50.78 buy point.  
+Minutes of the Fed's November policy meeting are due Tuesday at 2 p.m. ET.  
+美联储 11 月政策会议纪要将于美国东部时间周二下午 2 点公布。
 
 
-Insurance provider **Fidelity National Financial** ([FNF](https://research.investors.com/quote.aspx?symbol=FNF)) rose into a buy zone from a 62.97 buy point.  
+On Wednesday, the Fed's preferred inflation gauge, the personal consumption expenditures price index, will be released. [Economists expect](https://research.investors.com/economic-calendar/?) a 0.2% monthly increase in the October PCE and a 2.3% rise on an annual basis. Core inflation is expected to rise 0.3% for the month and 2.8% for the 12 month period.  
+周三，美联储首选的通胀指标——个人消费支出价格指数（Personal Consumer Expenditures Price Index）将公布。[经济学家预计](https://research.investors.com/economic-calendar/?) 10 月 PCE 月涨幅为 0.2%，年涨幅为 2.3%。预计本月核心通胀率将上涨 0.3%，12 个月将上涨 2.8%。
 
 
-Big Movers In Stock Market
---------------------------
+Stock Market Sees Multiple Breakouts股市出现多次突破
+--------------------------------------------
 
 
-In earnings, **Zoom Video** ([ZM](https://research.investors.com/quote.aspx?symbol=ZM)) soared into a profit zone from a cup-with-handle base's [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) of 72.36. Third quarter results after the market close showed that sales rose 3.6% to $1.2 billion, in line with estimates, while earnings of $1.38 per share rose 7%, beating views. The stock was little changed in extended trading.  
+
+**Sherwin-Williams** ([SHW](https://research.investors.com/quote.aspx?symbol=SHW)), which cleared a flat base at a buy point of 392.57, was among Monday's breakouts. The stock was also the second-highest point contributor to the Dow, while Nvidia cost the index more than 36 points. The Dow added 440 points Monday.  
+**宣伟**律师事务所 （[SHW）](https://research.investors.com/quote.aspx?symbol=SHW) 在买入点 392.57 处平仓，是周一的突破之一。该股也是道琼斯指数的第二高点贡献者，而英伟达使该指数损失超过 36 点。道琼斯指数周一上涨 440 点。
+
+
+Although oil and gas stocks lagged, offshore energy stock **Oceaneering** ([OII](https://research.investors.com/quote.aspx?symbol=OII)) rose and attempted a breakout at an alternative [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) of 30.45 before pulling back. Oceaneering cleared a handle entry at 29.22 earlier.  
+尽管石油和天然气股落后，但海上能源股 **Oceaneering** （[OII](https://research.investors.com/quote.aspx?symbol=OII)） 上涨并试图突破替代[买入点](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) 30.45，然后回落。Oceaneering 早些时候在 29.22 清除了一个句柄条目。
+
+
+Other notable breakouts included **Ceco Environmental** ([CECO](https://research.investors.com/quote.aspx?symbol=CECO)), which rallied past a 31.55 buy point amid a nine-day winning streak. The stock also has a [relative strength line](https://www.investors.com/how-to-invest/investors-corner/relative-strength-line-gives-crucial-clues-about-stocks-ready-to-make-big-gains/#:~:text=Simply%20put%2C%20the%20relative%20strength,with%20the%20Relative%20Strength%20Rating.) at a new high. In building products, **Azek** ([AZEK](https://research.investors.com/quote.aspx?symbol=AZEK)) gapped past a 50.78 buy point.  
+其他值得注意的突破包括 **Ceco Environmental** （[CECO），](https://research.investors.com/quote.aspx?symbol=CECO)在连续 9 天的上涨中反弹超过 31.55 的买入点。该股也有一条处于新高的[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/relative-strength-line-gives-crucial-clues-about-stocks-ready-to-make-big-gains/#:~:text=Simply%20put%2C%20the%20relative%20strength,with%20the%20Relative%20Strength%20Rating.)。在建筑产品方面，**Azek** （[AZEK）](https://research.investors.com/quote.aspx?symbol=AZEK) 跳空突破 50.78 的买入点。
+
+
+Insurance provider **Fidelity National Financial** ([FNF](https://research.investors.com/quote.aspx?symbol=FNF)) rose into a buy zone from a 62.97 buy point.  
+保险公司 **Fidelity National Financial** （[FNF）](https://research.investors.com/quote.aspx?symbol=FNF) 从 62.97 的买入点升至买入区域。
+
+
+Big Movers In Stock Market股市中的大涨势
+---------------------------------
+
+
+In earnings, **Zoom Video** ([ZM](https://research.investors.com/quote.aspx?symbol=ZM)) soared into a profit zone from a cup-with-handle base's [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) of 72.36. Third quarter results after the market close showed that sales rose 3.6% to $1.2 billion, in line with estimates, while earnings of $1.38 per share rose 7%, beating views. The stock was little changed in extended trading.  
+在收益方面，**Zoom Video** （[ZM](https://research.investors.com/quote.aspx?symbol=ZM)） 从带手柄杯基的[买入点](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) 72.36 飙升至利润区。收盘后的第三季度业绩显示，销售额增长 3.6% 至 12 亿美元，符合预期，而每股收益为 1.38 美元，增长 7%，超出预期。该股在延长交易中变化不大。
 
 
 But biotech **Cassava** ([SAVA](https://research.investors.com/quote.aspx?symbol=SAVA)) [cratered to a four-year low](https://www.investors.com/news/technology/cassava-sciences-stock-sava-stock-alzheimers-treatment-phase-3-simufilam/) after a Phase 3 test for its drug to treat mild-to-moderate Alzheimer's failed trials.  
