--- a/_columns/The_Big_Picture/zh-cn/2024-11-27.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-27.md
@@ -20,62 +20,53 @@ Investors took some profits ahead of the Thanksgiving holiday. The Nasdaq lost 0
 
 
 
-The Dow Jones Industrial Average, which is leading this week with a 1% increase, fell 0.3%. It was its first drop in six sessions.  
-本周以 1% 的涨幅领跑的道琼斯工业平均指数下跌 0.3%。这是它六个交易日以来的首次下跌。
+The Dow Jones Industrial Average, which is leading this week with a 1% increase, fell 0.3%. It was its first drop in six sessions.  
 
 
-Small caps outperformed, with the Russell 2000 up 0.1%. The index is nearing its record close of 2,442.74 set on Nov. 8, 2021, and is up more than 10% for November.  
-小盘股表现出色，罗素 2000 指数上涨 0.1%。该指数接近 2021 年 11 月 8 日创下的 2,442.74 点的历史收盘价，11 月上涨超过 10%。
+Small caps outperformed, with the Russell 2000 up 0.1%. The index is nearing its record close of 2,442.74 set on Nov. 8, 2021, and is up more than 10% for November.  
 
 
-Volume fell on the Nasdaq and New York Stock Exchange. While that indicated institutions sold in moderation, the eve of Thanksgiving tends to be quiet on Wall Street anyway, with many operatives taking a four-day break. The stock market will be closed Thursday and will shutter three hours early on Friday.  
-纳斯达克和纽约证券交易所的成交量下降。虽然这表明机构出售适度，但无论如何，感恩节前夕的华尔街往往很平静，许多工作人员都休息了四天。股市将于周四休市，周五将提前三个小时关闭。
+Volume fell on the Nasdaq and New York Stock Exchange. While that indicated institutions sold in moderation, the eve of Thanksgiving tends to be quiet on Wall Street anyway, with many operatives taking a four-day break. The stock market will be closed Thursday and will shutter three hours early on Friday.  
 
 
-Advancing stocks topped decliners by a 3-2 ratio on the NYSE and by about 6-to-5 on the Nasdaq, according to FactSet.  
-根据 FactSet 的数据，纽约证券交易所的上涨股票以 3：2 的比率领先于下跌的股票，在纳斯达克的比率约为 6：5。
+Advancing stocks topped decliners by a 3-2 ratio on the NYSE and by about 6-to-5 on the Nasdaq, according to FactSet.  
 
 
-Stock Market Hits Techs, Likes Financials股市打击科技股，喜欢金融股
-------------------------------------------------------
+Stock Market Hits Techs, Likes Financials
+-----------------------------------------
 
 
 While selling certainly wasn't isolated to the technology sector, it was the area of most concern Wednesday. Of the 15 worst-performing industry groups Wednesday, semiconductor, software and other tech groups accounted for 10 of them.  
 
 
-![](https://www.investors.com/wp-content/uploads/2024/11/MP112724-2.jpg)Tech bellwether **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) trimmed losses and closed at its 50-day moving average. A lukewarm outlook, tariff risks and other factors [weighed on Nvidia](https://www.investors.com/news/technology/nvidia-stock-nvda-earnings-china-trade-war-worries/).  
-科技领头羊**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 收于其 50 天移动平均线。不冷不热的前景、关税风险和其他因素[给英伟达带来了压力](https://www.investors.com/news/technology/nvidia-stock-nvda-earnings-china-trade-war-worries/)。
+![](https://www.investors.com/wp-content/uploads/2024/11/MP112724-2.jpg)Tech bellwether **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) trimmed losses and closed at its 50-day moving average. A lukewarm outlook, tariff risks and other factors [weighed on Nvidia](https://www.investors.com/news/technology/nvidia-stock-nvda-earnings-china-trade-war-worries/).  
 
 
-**CrowdStrike**'s ([CRWD](https://research.investors.com/quote.aspx?symbol=CRWD)) [current-quarter outlook](https://www.investors.com/news/technology/crowdstrike-stock-crowdstrike-earnings-news-q32024/) and **Dell**'s ([DELL](https://research.investors.com/quote.aspx?symbol=DELL)) [soft sales outlook](https://www.investors.com/news/technology/dell-stock-slips-as-revenue-misses-forecasts-despite-earnings-beat/) also hurt the sector. **HP** ([HPQ](https://research.investors.com/quote.aspx?symbol=HPQ)) plunged more than 11% after it [gave a cloudy outlook](https://www.investors.com/news/technology/hp-stock-earnings-q4-2024-hp-news/). **Workday** ([WDAY](https://research.investors.com/quote.aspx?symbol=WDAY)) offered a [subscription revenue outlook that was below views](https://www.investors.com/news/technology/workday-stock-workday-earnings-news-q32024/) and fell more than 6% in heavy volume. Dell and HP were the worst performers in the S&P 500.  
-**CrowdStrike** （[CRWD](https://research.investors.com/quote.aspx?symbol=CRWD)） [的当前季度前景](https://www.investors.com/news/technology/crowdstrike-stock-crowdstrike-earnings-news-q32024/)和**戴尔** （[DELL](https://research.investors.com/quote.aspx?symbol=DELL)） [疲软的销售前景](https://www.investors.com/news/technology/dell-stock-slips-as-revenue-misses-forecasts-despite-earnings-beat/)也损害了该行业。**惠普** （[HPQ）](https://research.investors.com/quote.aspx?symbol=HPQ) 在[给出阴云密布的前景](https://www.investors.com/news/technology/hp-stock-earnings-q4-2024-hp-news/)后暴跌超过 11%。**Workday** （[WDAY）](https://research.investors.com/quote.aspx?symbol=WDAY) 提供的[订阅收入前景低于浏览量](https://www.investors.com/news/technology/workday-stock-workday-earnings-news-q32024/)，销量下降超过 6%。戴尔和惠普是标准普尔 500 指数中表现最差的股票。
+**CrowdStrike**'s ([CRWD](https://research.investors.com/quote.aspx?symbol=CRWD)) [current-quarter outlook](https://www.investors.com/news/technology/crowdstrike-stock-crowdstrike-earnings-news-q32024/) and **Dell**'s ([DELL](https://research.investors.com/quote.aspx?symbol=DELL)) [soft sales outlook](https://www.investors.com/news/technology/dell-stock-slips-as-revenue-misses-forecasts-despite-earnings-beat/) also hurt the sector. **HP** ([HPQ](https://research.investors.com/quote.aspx?symbol=HPQ)) plunged more than 11% after it [gave a cloudy outlook](https://www.investors.com/news/technology/hp-stock-earnings-q4-2024-hp-news/). **Workday** ([WDAY](https://research.investors.com/quote.aspx?symbol=WDAY)) offered a [subscription revenue outlook that was below views](https://www.investors.com/news/technology/workday-stock-workday-earnings-news-q32024/) and fell more than 6% in heavy volume. Dell and HP were the worst performers in the S&P 500.  
 
 
 Real Estate Select Sector SPDR ([XLRE](https://research.investors.com/quote.aspx?symbol=XLRE)) led the S&P sectors, up 0.7%. Several breakouts were seen in real estate investment trusts, including **Essential Property Realty** ([EPRT](https://research.investors.com/quote.aspx?symbol=EPRT)) and **AvalonBay Communities** ([AVB](https://research.investors.com/quote.aspx?symbol=AVB)).  
 房地产精选板块 SPDR （[XLRE）](https://research.investors.com/quote.aspx?symbol=XLRE) 领涨标准普尔板块，上涨 0.7%。房地产投资信托基金出现了几次突破，包括 **Essential Property Realty** （[EPRT](https://research.investors.com/quote.aspx?symbol=EPRT)） 和 **AvalonBay Communities** （[AVB](https://research.investors.com/quote.aspx?symbol=AVB)）。
 
 
-Financials also climbed. **The Hartford** ([HIG](https://research.investors.com/quote.aspx?symbol=HIG)) broke out of a flat base, although in light trading. **Berkshire Hathaway** ([BRKB](https://research.investors.com/quote.aspx?symbol=BRKB)) also broke out of a flat base but closed below the 585.82 buy point.  
+Financials also climbed. **The Hartford** ([HIG](https://research.investors.com/quote.aspx?symbol=HIG)) broke out of a flat base, although in light trading. **Berkshire Hathaway** ([BRKB](https://research.investors.com/quote.aspx?symbol=BRKB)) also broke out of a flat base but closed below the 585.82 buy point.  
+金融股也攀升。**哈特福德** （[HIG](https://research.investors.com/quote.aspx?symbol=HIG)） 从平坦的基础中突破出来，尽管交易清淡。**伯克希尔哈撒韦**公司 （[BRKB）](https://research.investors.com/quote.aspx?symbol=BRKB) 也突破了平坦的底部，但收于 585.82 买入点下方。
 
 
-In general, growth stocks continue to perform well. The Innovator IBD Breakout Opportunities ETF ([BOUT](https://research.investors.com/quote.aspx?symbol=BOUT)) — which is designed to capture breakouts to new highs — is up 11.5% this month. That would make it the fund's best month in almost four years.  
-总体而言，成长型股票继续表现良好。旨在捕捉突破创下新高的 Innovator IBD Breakout Opportunities ETF （[BOUT）](https://research.investors.com/quote.aspx?symbol=BOUT) 本月上涨了 11.5%。这将使其成为该基金近四年来表现最好的一个月。
+In general, growth stocks continue to perform well. The Innovator IBD Breakout Opportunities ETF ([BOUT](https://research.investors.com/quote.aspx?symbol=BOUT)) — which is designed to capture breakouts to new highs — is up 11.5% this month. That would make it the fund's best month in almost four years.  
 
 
-But the IBD 50 index underperformed with a 1% drop Wednesday.  
-但 IBD 50 指数周三表现不佳，下跌 1%。
+But the IBD 50 index underperformed with a 1% drop Wednesday.  
 
 
-If there's anything to complain about is that the November rally has left most quality stocks extended from buy areas. The more-recent breakouts in the [MarketSurge 250 index](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) have come from a mix of financial, energy, defense, tech and consumer companies.  
-如果有什么可抱怨的，那就是 11 月的反弹使大多数优质股票从买入区域延伸。[MarketSurge 250 指数](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)最近的突破来自金融、能源、国防、科技和消费公司的混合。
+If there's anything to complain about is that the November rally has left most quality stocks extended from buy areas. The more-recent breakouts in the [MarketSurge 250 index](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) have come from a mix of financial, energy, defense, tech and consumer companies.  
 
 
-Stock Market Seasonal Trends Favorable股市季节性趋势有利
------------------------------------------------
+Stock Market Seasonal Trends Favorable
+--------------------------------------
 
 
-Investors can be thankful for the stock market's blessings this year. The Nasdaq is up 27% and the S&P 500 has risen close to 26% year to date.  
-投资者可以感谢今年股市的祝福。纳斯达克指数上涨了 27%，标准普尔 500 指数今年迄今上涨了近 26%。
+Investors can be thankful for the stock market's blessings this year. The Nasdaq is up 27% and the S&P 500 has risen close to 26% year to date.  
 
 
 Friday's half session will cap a month in which the S&P and Nasdaq have moved up more than 5%. And next week, December brings a historically favorable trend for the stock market.  
@@ -111,11 +102,11 @@ The Fed tends to put more weight on core PCE, which removes food and energy pric
 
 
 Initial claims for unemployment benefits stayed at [213,000 the most recent week](https://ibd.econoday.com/byevent?fid=591316&year=2024&lid=0#top), below the 217,000 estimate culled by Econoday. The revised [third-quarter GDP climbed 2.8%](https://www.bea.gov/news/2024/gross-domestic-product-third-quarter-2024-second-estimate-and-corporate-profits), same as in the initial estimate and equal with forecasts.  
-最近一周初请失业金人数保持在 [213,000](https://ibd.econoday.com/byevent?fid=591316&year=2024&lid=0#top) 人，低于 Econoday 估计的 217,000 人。修正后的[第三季度 GDP 增长 2.8%，](https://www.bea.gov/news/2024/gross-domestic-product-third-quarter-2024-second-estimate-and-corporate-profits)与初步估计相同，与预测相同。
+最近一周初请失业金人数保持在 [213,000](https://ibd.econoday.com/byevent?fid=591316&year=2024&lid=0#top) 人，低于 Econoday 估计的 217,000 人。修正后的[第三季度 GDP 增长 2.8%，](https://www.bea.gov/news/2024/gross-domestic-product-third-quarter-2024-second-estimate-and-corporate-profits)与初步估计相同，与预测持平。
 
 
 Bond traders [raised the odds](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html) of a quarter-point rate cut at the Fed's December meeting to 70% vs. about 60% on Tuesday. Those odds crept higher the past week.  
-债券交易员将美联储 12 月会议上降息 25 个基点[的几率提高](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html)到 70%，而周二的概率约为 60%。过去一周，这些赔率逐渐上升。
+债券交易员将美联储 12 月会议上降息 25 个基点的[几率提高](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html)到 70%，而周二的概率约为 60%。过去一周，这些赔率逐渐上升。
 
 
 
@@ -133,7 +124,7 @@ Bond traders [raised the odds](https://www.cmegroup.com/markets/interest-rates/c
 
 
 "Given the broad consensus-like reading across the slew of economic data releases today, we do not see any meaningful impact on the Fed's upcoming rate decision in December," Greg Wilensky, head of U.S. Fixed Income at Janus Henderson Investors, said in a report to clients.  
-“鉴于今天发布的一系列经济数据普遍一致，我们认为美联储即将在12月做出的利率决定不会受到任何有意义的影响，”骏利亨德森投资美国固定收益主管Greg Wilensky在给客户的一份报告中表示。
+“鉴于今天发布的一系列经济数据的广泛共识，我们认为不会对美联储即将在12月做出的利率决定产生任何有意义的影响，”骏利亨德森投资美国固定收益主管Greg Wilensky在给客户的一份报告中表示。
 
 
 "We still believe that a 25-basis point reduction to the policy rate is extremely likely. We feel the odds of a cut are still higher than the 70% currently implied in the futures market. In our view, it will take a combination of a very strong NFP (nonfarm payrolls) print and a higher than expected core CPI release to cause a pause at the December meeting."  
