--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-27.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-27.md
@@ -21,7 +21,7 @@ Rally For Dow Jones Stock道琼斯股票反弹
 
 
 Travelers, a Dow Jones stock, has rallied 17% so far this quarter on earnings and the postelection rally.  
-道琼斯股票 Travelers 本季度迄今因收益和选后反弹而上涨 17%。
+道琼斯股票 Travelers 本季度迄今因收益和选后反弹而上涨了 17%。
 
 
 A huge earnings beat on Oct. 17 led to a flurry of analyst price-target hikes, FactSet shows. But the average rating of 29 analysts covering Travelers stock is hold.  
@@ -56,7 +56,7 @@ Travelers 的股价[今天在股市](https://www.investors.com/research/stock-ma
 
 
 The [relative strength line](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/) for TRV stock is rising fast but remains below the peak of the base for now. It would send a positive signal to see the RS line move to new highs as the Dow Jones insurance company tries to break out. A rising RS line means that a stock is outperforming the S&P 500 index. It is the blue line in the chart provided.  
-TRV 股票的[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/)正在快速上升，但目前仍低于底部的峰值。随着道琼斯保险公司试图突破，RS 线升至新高将发出积极信号。上升的 RS 线意味着一只股票的表现优于标准普尔 500 指数。它是所提供图表中的蓝线。
+TRV 股票的[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/)正在快速上升，但目前仍低于底部的峰值。随着道琼斯保险公司试图突破，RS 线创下新高，这将发出一个积极的信号。上升的 RS 线意味着一只股票的表现优于标准普尔 500 指数。它是所提供图表中的蓝线。
 
 
 Travelers stock surged to all-time highs on earnings in October. It then shaped the six-week flat base, which formed entirely above the 50-day moving average, a favorable sign.  
