--- a/_columns/The_Big_Picture/zh-cn/2024-11-26.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-26.md
@@ -25,7 +25,7 @@ The major stock indexes strengthened a bit during the final hour of trading afte
 
 
 After a pullback, Amazon is back in a buy zone from a 201.20 alternative entry. (It had topped a 195.37 handle entry Nov. 1.) Microsoft popped above a couple of short-term moving averages as it tries to break out of a downtrend. Meta Platforms is only 5% off its high as it forms a flat base. Meta tried to reclaims its 50-day moving average but closed just below the line.  
-回调后，亚马逊从 201.20 的替代入场点回到买入区域。（它在 11 月 1 日的 195.37 句柄条目中名列前茅。Microsoft 在试图突破下跌趋势时突破了几个短期移动平均线。Meta Platforms 仅比其高点低 5%，因为它形成了一个平坦的基础。Meta 试图收复其 50 天移动平均线，但收盘价略低于该线。
+回调后，亚马逊从 201.20 的替代条目回到买入区域。（它在 11 月 1 日的 195.37 句柄条目中名列前茅。Microsoft 在试图突破下跌趋势时突破了几个短期移动平均线。Meta Platforms 仅比其高点低 5%，因为它形成了一个平坦的基础。Meta 试图收复其 50 天移动平均线，但收盘价略低于该线。
 
 
 Stock Market Today 今日股市
