--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-27.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-27.md
@@ -38,61 +38,49 @@ Founded in 1853, Travelers provides commercial insurance and personal insurance,
 Travelers 成立于 1853 年，提供商业保险和个人保险，以及债券和专业保险。
 
 
-Broadly, the insurance market is undergoing vast change. Insurers are shifting regional coverage and underwriting policies, exiting some markets while increasing premiums and reducing coverage in others. The result is creating winners and losers, with larger players tending to pick up market share.  
-从广义上讲，保险市场正在发生巨大变化。保险公司正在改变区域保险和承保政策，退出一些市场，同时提高保费并减少其他市场的承保范围。结果是产生了赢家和输家，较大的参与者往往会占据市场份额。
+Broadly, the insurance market is undergoing vast change. Insurers are shifting regional coverage and underwriting policies, exiting some markets while increasing premiums and reducing coverage in others. The result is creating winners and losers, with larger players tending to pick up market share.  
 
 
-Industry peer **Gallagher** ([AJG](https://research.investors.com/quote.aspx?symbol=AJG)), an insurance broker, is a [Long-Term Leader](https://www.investors.com/research/best-stocks-to-buy-now-long-term-stocks-ibd-long-term-leaders-list/). Insurance is a core **Berkshire Hathaway** ([BRKB](https://research.investors.com/quote.aspx?symbol=BRKB)) business. But app-based insurance upstarts **Lemonade** ([LMND](https://research.investors.com/quote.aspx?symbol=LMND)) and **Root** ([ROOT](https://research.investors.com/quote.aspx?symbol=ROOT)) have far outperformed their established peers in the past year.  
-行业同行 **Gallagher** （[AJG](https://research.investors.com/quote.aspx?symbol=AJG)） 是一家保险经纪人，是[长期领导者](https://www.investors.com/research/best-stocks-to-buy-now-long-term-stocks-ibd-long-term-leaders-list/)。保险是**伯克希尔哈撒韦**公司 （[BRKB）](https://research.investors.com/quote.aspx?symbol=BRKB) 的核心业务。但基于应用程序的保险新贵 **Lemonade** （[LMND）](https://research.investors.com/quote.aspx?symbol=LMND) 和 **Root** （[ROOT）](https://research.investors.com/quote.aspx?symbol=ROOT) 在过去一年中的表现远超老牌同行。
+Industry peer **Gallagher** ([AJG](https://research.investors.com/quote.aspx?symbol=AJG)), an insurance broker, is a [Long-Term Leader](https://www.investors.com/research/best-stocks-to-buy-now-long-term-stocks-ibd-long-term-leaders-list/). Insurance is a core **Berkshire Hathaway** ([BRKB](https://research.investors.com/quote.aspx?symbol=BRKB)) business. But app-based insurance upstarts **Lemonade** ([LMND](https://research.investors.com/quote.aspx?symbol=LMND)) and **Root** ([ROOT](https://research.investors.com/quote.aspx?symbol=ROOT)) have far outperformed their established peers in the past year.  
 
 
-Travelers Stock, Insurance Stocks旅行者股票， 保险股票
---------------------------------------------
+Travelers Stock, Insurance Stocks
+---------------------------------
 
 
-Shares of Travelers rose 1.1% on the [stock market today](https://www.investors.com/research/stock-market-data-dow-jones-sp-500-nasdaq-spdr-etfs/), above all the shorter- and longer-term moving averages. Travelers stock neared a 269.56 [buy point](https://www.investors.com/ibd-university/how-to-buy/) from a flat base, according to [MarketSurge pattern recognition](https://marketsurge.investors.com). Shares traded just 1% below the entry on Wednesday.  
-Travelers 的股价[今天在股市](https://www.investors.com/research/stock-market-data-dow-jones-sp-500-nasdaq-spdr-etfs/)上上涨了 1.1%，高于短期和长期移动平均线。根据 [MarketSurge 模式识别](https://marketsurge.investors.com)，旅行者股票从平坦的底部接近 269.56 [的买入点](https://www.investors.com/ibd-university/how-to-buy/)。周三，股价仅比入场价低 1%。
+Shares of Travelers rose 1.1% on the [stock market today](https://www.investors.com/research/stock-market-data-dow-jones-sp-500-nasdaq-spdr-etfs/), above all the shorter- and longer-term moving averages. Travelers stock neared a 269.56 [buy point](https://www.investors.com/ibd-university/how-to-buy/) from a flat base, according to [MarketSurge pattern recognition](https://marketsurge.investors.com). Shares traded just 1% below the entry on Wednesday.  
 
 
 
-The [relative strength line](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/) for TRV stock is rising fast but remains below the peak of the base for now. It would send a positive signal to see the RS line move to new highs as the Dow Jones insurance company tries to break out. A rising RS line means that a stock is outperforming the S&P 500 index. It is the blue line in the chart provided.  
-TRV 股票的[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/)正在快速上升，但目前仍低于底部的峰值。随着道琼斯保险公司试图突破，RS 线创下新高，这将发出一个积极的信号。上升的 RS 线意味着一只股票的表现优于标准普尔 500 指数。它是所提供图表中的蓝线。
+The [relative strength line](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/) for TRV stock is rising fast but remains below the peak of the base for now. It would send a positive signal to see the RS line move to new highs as the Dow Jones insurance company tries to break out. A rising RS line means that a stock is outperforming the S&P 500 index. It is the blue line in the chart provided.  
 
 
-Travelers stock surged to all-time highs on earnings in October. It then shaped the six-week flat base, which formed entirely above the 50-day moving average, a favorable sign.  
-Travelers 股票在 10 月份的收益飙升至历史新高。然后，它形成了 6 周平坦的底部，完全在 50 天移动平均线上方形成，这是一个有利的迹象。
+Travelers stock surged to all-time highs on earnings in October. It then shaped the six-week flat base, which formed entirely above the 50-day moving average, a favorable sign.  
 
 
-On Wednesday, **Hartford Financial Services** ([HIG](https://research.investors.com/quote.aspx?symbol=HIG)), an insurance stock, topped a 123.23 flat-base buy point. Class-B shares of Berkshire Hathaway stock cleared a 484.82 flat-base buy point intraday, but close below the entry.  
-周三，保险股**哈特福德金融服务** （[HIG](https://research.investors.com/quote.aspx?symbol=HIG)） 突破 123.23 的平底买入点。伯克希尔哈撒韦公司股票的 B 类股票盘中清仓买入点 484.82，但收于入场点下方。
+On Wednesday, **Hartford Financial Services** ([HIG](https://research.investors.com/quote.aspx?symbol=HIG)), an insurance stock, topped a 123.23 flat-base buy point. Class-B shares of Berkshire Hathaway stock cleared a 484.82 flat-base buy point intraday, but close below the entry.  
 
 
-Travelers Earnings Boom 旅行者收入激增
--------------------------------
+Travelers Earnings Boom
+-----------------------
 
 
-The [IBD Stock Checkup](https://research.investors.com/stock-checkup/nyse-travelers-trv.aspx) tool shows that Travelers stock earns a solid [Composite Rating](https://education.investors.com/financialdictionary.aspx?mode=1&term=Composite+Rating+SmartSelect&termid=1) of 92 out of 99. The rating rolls various fundamental and technical metric into one easy-to-use score.  
-[IBD 股票检查](https://research.investors.com/stock-checkup/nyse-travelers-trv.aspx)工具显示，Travelers 股票获得了 92 分（满分 99 分）的稳定[综合评分](https://education.investors.com/financialdictionary.aspx?mode=1&term=Composite+Rating+SmartSelect&termid=1)。该评级将各种基本和技术指标汇总为一个易于使用的分数。
+The [IBD Stock Checkup](https://research.investors.com/stock-checkup/nyse-travelers-trv.aspx) tool shows that Travelers stock earns a solid [Composite Rating](https://education.investors.com/financialdictionary.aspx?mode=1&term=Composite+Rating+SmartSelect&termid=1) of 92 out of 99. The rating rolls various fundamental and technical metric into one easy-to-use score.  
 
 
-In terms of other key ratings, Travelers shows an RS Rating of 83. It flaunts a superior EPS Rating of 96, also out of a best-possible 99.  
-在其他关键评分方面，旅行者的 RS 评分为 83。它标榜着 96 分的卓越 EPS 评分，也是最好的 99 分。
+In terms of other key ratings, Travelers shows an RS Rating of 83. It flaunts a superior EPS Rating of 96, also out of a best-possible 99.  
 
 
-Earnings growth has averaged 1,422% over the past three quarters, vs. the more historically typical three-year rate of 2%. That reflects a huge earnings recovery amid higher underwriting volumes, higher interest rates and higher stock markets.  
-过去三个季度的盈利增长平均为 1,422%，而历史上更典型的三年增长率为 2%。这反映了在承保量增加、利率上升和股市上涨的情况下，盈利大幅复苏。
+Earnings growth has averaged 1,422% over the past three quarters, vs. the more historically typical three-year rate of 2%. That reflects a huge earnings recovery amid higher underwriting volumes, higher interest rates and higher stock markets.  
 
 
-For the third quarter, Travelers delivered a 169% leap in operating earnings per share to $5.24, despite higher catastrophe losses. That far outpaced estimates for $3.66 and benefited from easy year-ago comparisons.  
-第三季度，尽管巨灾损失增加，但 Travelers 的每股营业收益增长了 169% 至 5.24 美元。这远高于 3.66 美元的预期，并受益于去年同期的简单比较。
+For the third quarter, Travelers delivered a 169% leap in operating earnings per share to $5.24, despite higher catastrophe losses. That far outpaced estimates for $3.66 and benefited from easy year-ago comparisons.  
 
 
-Travelers tied Q3 catastrophe losses mainly to Hurricane Helene.  
-旅行者将第三季度的巨灾损失主要与飓风海伦联系起来。
+Travelers tied Q3 catastrophe losses mainly to Hurricane Helene.  
 
 
-In Q3, net premiums written rose almost 8% to record levels. The combined ratio, a key profitability metric, improved by almost 8 points to 93.2%. Net investment income jumped 18%.  
-第三季度，净承保保费增长近 8%，达到创纪录的水平。综合成本率（一个关键的盈利能力指标）提高了近 8 个百分点，达到 93.2%。净投资收益增长 18%。
+In Q3, net premiums written rose almost 8% to record levels. The combined ratio, a key profitability metric, improved by almost 8 points to 93.2%. Net investment income jumped 18%.  
 
 
 Travelers also realized a net $42 million in after-tax investment gains. That contrasted with net realized investment losses in the year-ago quarter.  
